reduce number of duplicates in the reports
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit ced41266b638eb7b824719525dd3a8fc13ff5309)